--- a/architecture/rate-limiting.mdx
+++ b/architecture/rate-limiting.mdx
@@ -21,17 +21,20 @@ ensure fair usage while allowing burst capacity for real-time applications.
 Rate limits vary based on your subscription plan:
 
 **Access API (per connection):** 
-| Plan | Rate Limit | Burst Capacity | |
------------- | ------------- | -------------- | 
+| Plan | Rate Limit | Burst Capacity | 
+| ------------ | ------------- | -------------- | 
 | Pay as You Go| 30 req/min | 50 requests | 
 | Starter | 60 req/min | 90 requests | 
 | Launch | 120 req/min | 200 requests | 
 | Scale | No limit* | No limit* |
 
 **Other APIs (per organization):** 
-| API Category | Default Limit | Burst Capacity | | ----------------- | ------------- | -------------- | | **Dynamic
-Rules** | 1 req/min | 3 requests | | **Sign** | 10 req/min | 20 requests | |
-**Link** | No limit | - | | **Account** | No limit | - |
+| API Category | Default Limit | Burst Capacity | 
+| ----------------- | ------------- | -------------- | 
+| **Dynamic Rules** | 1 req/min | 3 requests | 
+| **Sign** | 10 req/min | 20 requests | 
+| **Link** | No limit | - | 
+| **Account** | No limit | - |
 
 <Warning>
 	*Scale plan has no OFAuth rate limits but is still subject to OnlyFans' native
