--- a/guides/link/hosted.mdx
+++ b/guides/link/hosted.mdx
@@ -12,6 +12,10 @@ Hosted Mode provides the simplest integration path for OnlyFans authentication. 
 	requiring approval.
 </Info>
 
+<Info>
+	**Want a Better UX?** For a more seamless experience without redirects, check out our [Link Embed Library](/guides/link/embed) which provides popup-based authentication that keeps users in your application.
+</Info>
+
 
 
 ## How It Works
@@ -56,9 +60,7 @@ A more seamless experience using our Embed SDK:
 - SDK handles popup management and communication
 
 <Info>
-	**Embed SDK**: The OFAuth Embed SDK provides a seamless popup experience for
-	hosted authentication. Contact [support@ofauth.com](mailto:support@ofauth.com)
-	for SDK access and integration documentation.
+	**Link Embed Library**: The OFAuth Link Embed library provides pre-built components and a seamless popup flow for hosted authentication. Visit our [comprehensive embed guide](/guides/link/embed) for detailed implementation instructions.
 </Info>
 
 ## Base URL
