--- a/getting-started/quickstart/authentication.mdx
+++ b/getting-started/quickstart/authentication.mdx
@@ -23,6 +23,7 @@ const response = await fetch("https://api.ofauth.com/v2/link/init", {
 	method: "POST",
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"Content-Type": "application/json",
 	},
 	body: JSON.stringify({
@@ -41,6 +42,7 @@ response = requests.post(
 	"https://api.ofauth.com/v2/link/init",
 	headers={
 		"apikey": "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"Content-Type": "application/json"
 	},
 	json={"mode": "hosted"}
@@ -53,6 +55,7 @@ print(f"Session URL: {session['url']}")
 ```curl cURL
 curl -X POST https://api.ofauth.com/v2/link/init \
   -H "apikey: YOUR_API_KEY" \
+  -H "x-platform-id: YOUR_PLATFORM_ID" \
   -H "Content-Type: application/json" \
   -d '{"mode": "hosted"}'
 ```
@@ -96,6 +99,7 @@ After the user completes authentication, you can fetch their connections:
 const response = await fetch("https://api.ofauth.com/v2/link/connections", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 	},
 });
 
@@ -108,7 +112,10 @@ import requests
 
 response = requests.get(
 	"https://api.ofauth.com/v2/link/connections",
-	headers={"apikey": "YOUR_API_KEY"}
+	headers={
+		"apikey": "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID"
+	}
 )
 
 connections = response.json()
@@ -117,6 +124,7 @@ print("User connections:", connections)
 
 ```curl cURL
 curl -H "apikey: YOUR_API_KEY" \
+  -H "x-platform-id: YOUR_PLATFORM_ID" \
   https://api.ofauth.com/v2/link/connections
 ```
 
@@ -147,6 +155,7 @@ OnlyFans data by including it in the `x-connection-id` header:
 const response = await fetch("https://api.ofauth.com/v2/access/profile", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
