--- a/getting-started/quickstart/data-access.mdx
+++ b/getting-started/quickstart/data-access.mdx
@@ -37,6 +37,7 @@ async function getUserData(connectionId) {
 	const response = await fetch("https://api.ofauth.com/v2/access/users/me", {
 		headers: {
 			apikey: "YOUR_API_KEY",
+			"x-platform-id": "YOUR_PLATFORM_ID",
 			"x-connection-id": connectionId,
 		},
 	});
@@ -59,6 +60,7 @@ async function getUserDataWithHeaders() {
 	const response = await fetch("https://api.ofauth.com/v2/access/users/me", {
 		headers: {
 			apikey: "YOUR_API_KEY",
+			"x-platform-id": "YOUR_PLATFORM_ID",
 			"x-bc": "your_bc_header_value",
 			"user-id": "12345",
 			cookie: "your_session_cookie",
@@ -106,6 +108,7 @@ print(user_data)
 const profile = await fetch("https://api.ofauth.com/v2/access/users/me", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -119,6 +122,7 @@ const userId = "12345";
 const profile = await fetch(`https://api.ofauth.com/v2/access/users/${userId}`, {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -134,6 +138,7 @@ const profile = await fetch(`https://api.ofauth.com/v2/access/users/${userId}`, 
 const posts = await fetch("https://api.ofauth.com/v2/access/posts", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -147,6 +152,7 @@ const userId = "12345";
 const userPosts = await fetch(`https://api.ofauth.com/v2/access/users/${userId}/posts`, {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -156,6 +162,7 @@ const userPosts = await fetch(`https://api.ofauth.com/v2/access/users/${userId}/
 const stories = await fetch("https://api.ofauth.com/v2/access/users/12345/stories", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -171,6 +178,7 @@ const stories = await fetch("https://api.ofauth.com/v2/access/users/12345/storie
 const conversations = await fetch("https://api.ofauth.com/v2/access/chats/rooms", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -184,6 +192,7 @@ const roomId = "123";
 const messages = await fetch(`https://api.ofauth.com/v2/access/chats/rooms/${roomId}/messages`, {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -199,6 +208,7 @@ const messages = await fetch(`https://api.ofauth.com/v2/access/chats/rooms/${roo
 const subscriptions = await fetch("https://api.ofauth.com/v2/access/subscriptions", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -208,6 +218,7 @@ const subscriptions = await fetch("https://api.ofauth.com/v2/access/subscription
 const following = await fetch("https://api.ofauth.com/v2/access/users/me/following", {
 	headers: {
 		apikey: "YOUR_API_KEY",
+		"x-platform-id": "YOUR_PLATFORM_ID",
 		"x-connection-id": "conn_abc123",
 	},
 });
@@ -227,6 +238,7 @@ async function safeApiCall(endpoint, connectionId) {
 		const response = await fetch(`https://api.ofauth.com/v2/access/${endpoint}`, {
 			headers: {
 				apikey: "YOUR_API_KEY",
+				"x-platform-id": "YOUR_PLATFORM_ID",
 				"x-connection-id": connectionId,
 			},
 		});
@@ -329,6 +341,7 @@ async function apiCallWithBackoff(endpoint, connectionId, retries = 3) {
 			const response = await fetch(`https://api.ofauth.com/v2/access/${endpoint}`, {
 				headers: {
 					apikey: "YOUR_API_KEY",
+					"x-platform-id": "YOUR_PLATFORM_ID",
 					"x-connection-id": connectionId,
 				},
 			});
